# multi-gpu-path-tracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  camera.h  conanfile.txt  helper_math.h  hitable.h  hitable_list.h  main.cu  material.h  out.prof  scene3d.h  scene_loader.h  sphere.h  triangle.h
models/: README.md  cornell-box.glb  cornell-box.mtl  cornell_duck.glb  cube.mtl  cubes2.mtl  f0.mtl  monkey.mtl
models/cornel/: cornell_box.gltf
proto/: main.proto
resources/: cubes.mtl
scripts/: ares_setup.sh  build.sh  compile_and_run_job.sh  compile_code.sh  install_dependencies.sh  install_deps.sh  run-job.sh  run.sh  run_job.sh  ubuntu_setup.sh
src/: .DevicePathTracer.h.swp  ArgumentLoader.h  CameraConfig.h  CameraParams.h  DevicePathTracer.h  Framebuffer.h  GPUThread.h  HostMaterial.h  HostScene.cpp  HostScene.h  HostTexture.cpp  HostTexture.h  RenderManager.h  RendererConfig.h  SafeQueue.h  StreamThread.h  Texture.h  ThreadPool.h  aabb.h  barrier.h  bvh.h  camera.h  cuda_utils.cuh  cuda_utils.h  helper_math.cu  helper_math.h  hitable.h  hitable_list.h  host_object3d.h  interval.h  main.cu  material.h  obj_loader.cuh  obj_loader.h  object3d.h  onb.h  pdf.h  ray.h  scene.h  semaphore.h  (+2 more)
src/LocalRenderer/: Renderer.cpp  Renderer.h  Utils.h  Window.cpp  Window.h
src/PixelDataEncoder/: AVIFEncoder.cpp  AVIFEncoder.h  H264Encoder.cpp  H264Encoder.h  JPEGEncoder.cpp  JPEGEncoder.h  PNGEncoder.cpp  PNGEncoder.h  PixelDataEncoder.h
src/Profiling/: GPUMonitor.cpp  GPUMonitor.h
src/Renderer/: Renderer.h
src/Renderer/LocalRenderer/: LocalRenderer.cpp  LocalRenderer.h  Utils.h  Window.cpp  Window.h
src/Renderer/RemoteRenderer/: RemoteEventHandlers.h  RemoteRenderer.cpp  RemoteRenderer.h
src/Renderer/RemoteRenderer/EventHandlers/: MouseMoveEventHandler.h
src/Renderer/RemoteRenderer/RemoteEventHandlers/: CameraEventHandler.h  EventHandler.h  KeyboardEventHandler.h  MouseMoveEventHandler.h  RemoteEventHandlers.h  RenderManagerEventHander.h  SynchronizeEventHandler.h
src/Scheduling/: TaskGenerator.h
src/genproto/: main.pb.cc  main.pb.h
tests/: scene.cpp
utils/: compile_code.sh  run_debug_job.sh
